variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: value or is not a member of Boolean
while ((!estSurBiscuit()) or (nb != 3)) { if (estSurBiscuit()) {nb = nb + 1
                          ^