variables.RunFour.scala.code
var nb = 0 
while ((!estSurBiscuit()) or (nb != 3)) { if (estSurBiscuit()) {nb = nb + 1
                                                         avance()}
                                    else {avance()}}